# gman

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  codecov.yml  package-lock.json  rustfmt.toml
.cargo-husky/hooks/: pre-commit  pre-push
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: check.yml  release.yml  test-release.yml  test.yml
deployment/chocolatey/: chocolateyinstall.ps1.template  gman.nuspec.template  managarr.nuspec.template
deployment/homebrew/: gman.rb.template
scripts/: install_gman.ps1  install_gman.sh
src/: config.rs  lib.rs
src/providers/: aws_secrets_manager.rs  azure_key_vault.rs  gcp_secret_manager.rs  git_sync.rs  gopass.rs  local.rs  mod.rs
tests/: config_tests.rs  prop_crypto.rs  tests.rs
tests/providers/: aws_secrets_manager_tests.rs  azure_key_vault_tests.rs  gcp_secret_manager_tests.rs  git_sync_tests.rs  gopass_tests.rs  local_tests.rs  mod.rs  mod_tests.rs  provider_tests.rs
