[package]
name = "gman"
version = "0.1.0"
edition = "2024"
authors = ["Alex Clarke <alex.j.tusa@gmail.com>"]
description = "Universal credential management CLI"
keywords = ["cli", "secrets", "credentials", "passwords"]
documentation = "https://github.com/Dark-Alex-17/gman"
repository = "https://github.com/Dark-Alex-17/gman"
homepage = "https://github.com/Dark-Alex-17/gman"
readme = "README.md"
license = "MIT"
rust-version = "1.89.0"
exclude = [".github", "CONTRIBUTING.md", "*.log", "tags"]

[dependencies]
anyhow = "1.0.99"
argon2 = "0.5.3"
backtrace = "0.3.75"
base64 = "0.22.1"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
clap = { version = "4.5.47", features = ["cargo", "derive", "env", "wrap_help"] }
clap_complete = "4.5.57"
confy = { version = "1.0.0", default-features = false, features = ["yaml_conf"] }
crossterm = "0.29.0"
dirs = "6.0.0"
human-panic = "2.0.3"
log = "0.4.28"
log4rs = "1.4.0"
rpassword = "7.4.0"
secrecy = "0.10.3"
validator = { version = "0.20.0", features = ["derive"] }
zeroize = "1.8.1"
serde = { version = "1.0.219", features = ["derive"] }
heck = "0.5.0"
thiserror = "2.0.16"
serde_with = "3.14.0"
serde_json = "1.0.143"

[[bin]]
bench = false
name = "gman"

[profile.release]
lto = true
strip = true
opt-level = "z"
