[package]
name = "gman"
version = "0.0.3"
edition = "2024"
authors = ["Alex Clarke <alex.j.tusa@gmail.com>"]
description = "Universal secret management and injection tool"
keywords = ["cli", "secrets", "credentials", "command-line", "encryption"]
documentation = "https://github.com/Dark-Alex-17/gman"
repository = "https://github.com/Dark-Alex-17/gman"
homepage = "https://github.com/Dark-Alex-17/gman"
readme = "README.md"
license = "BSD-3-Clause"
rust-version = "1.89.0"
exclude = [".github", "CONTRIBUTING.md", "*.log", "tags"]

[dependencies]
anyhow = "1.0.99"
argon2 = "0.5.3"
backtrace = "0.3.75"
base64 = "0.22.1"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
clap = { version = "4.5.47", features = [
  "cargo",
  "derive",
  "env",
  "wrap_help",
] }
clap_complete = "4.5.57"
confy = { version = "1.0.0", default-features = false, features = [
  "yaml_conf",
] }
crossterm = "0.29.0"
dirs = "6.0.0"
human-panic = "2.0.3"
log = "0.4.28"
log4rs = "1.4.0"
rpassword = "7.4.0"
secrecy = "0.10.3"
validator = { version = "0.20.0", features = ["derive"] }
zeroize = "1.8.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.14.0"
serde_json = "1.0.143"
dialoguer = "0.12.0"
chrono = "0.4.42"
indoc = "2.0.6"
regex = "1.11.2"
serde_yaml = "0.9.34"
tempfile = "3.22.0"
aws-sdk-secretsmanager = "1.88.0"
tokio = { version = "1.47.1", features = ["full"] }
aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
async-trait = "0.1.89"
futures = "0.3.31"
gcloud-sdk = { version = "0.28.1", features = [
  "google-cloud-secretmanager-v1",
] }
crc32c = "0.6.8"
azure_identity = "0.27.0"
azure_security_keyvault_secrets = "0.6.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
proptest = "1.5.0"
assert_cmd = "2.0.16"
predicates = "3.1.2"


[[bin]]
bench = false
name = "gman"

[profile.release]
lto = true
strip = true
opt-level = "z"

[[test]]
name = "integration"
path = "tests/tests.rs"
